--- a/rockn_roll/style.cfg
+++ b/rockn_roll/style.cfg
@@ -18,7 +18,7 @@
 
 # General Information about this style
 name = Rock'n Roll
-copyright = &copy; Vinny
+copyright = © Vinny
 style_version = 2.0.0
 phpbb_version = 3.2.1
 
