--- a/rockn_roll/style.cfg
+++ b/rockn_roll/style.cfg
@@ -1,24 +1,26 @@
 #
 # phpBB Style Configuration File
 #
-# @package phpBB3
-# @copyright (c) 2005 phpBB Group 
-# @license http://opensource.org/licenses/gpl-license.php GNU Public License 
+# This file is part of the phpBB Forum Software package.
 #
+# @copyright (c) phpBB Limited <https://www.phpbb.com>
+# @license GNU General Public License, version 2 (GPL-2.0)
+#
+# For full copyright and license information, please see
+# the docs/CREDITS.txt file.
 #
 # At the left is the name, please do not change this
 # At the right the value is entered
-# For on/off options the valid values are on, off, 1, 0, true and false
 #
 # Values get trimmed, if you want to add a space in front or at the end of
-# the value, then enclose the value with single or double quotes. 
+# the value, then enclose the value with single or double quotes.
 # Single and double quotes do not need to be escaped.
 #
-# 
+#
 
 # General Information about this style
 name = Rock'n Roll
-copyright = &copy; Vinny
+copyright = © Vinny
 style_version = 2.0.0
 phpbb_version = 3.2.1
 
