--- a/rockn_roll/style.cfg
+++ b/rockn_roll/style.cfg
@@ -21,11 +21,11 @@
 # General Information about this style
 name = Rock'n Roll
 copyright = © Vinny
-style_version = 2.0.3
-phpbb_version = 3.2.4
+style_version = 2.0.5
+phpbb_version = 3.2.7
 
 # Defining a different template bitfield
-# template_bitfield = lNg=
+# template_bitfield = //g=
 
 # Parent style
 # Set value to empty or to this style's name if this style does not have a parent style
