--- a/rockn_roll/style.cfg
+++ b/rockn_roll/style.cfg
@@ -20,9 +20,9 @@
 
 # General Information about this style
 name = Rock'n Roll
-copyright = © Vinny
-style_version = 2.0.6
-phpbb_version = 3.2.8
+copyright = © Vinny - phpBB Spain 2020
+style_version = 2.0.7
+phpbb_version = 3.2.9
 
 # Defining a different template bitfield
 # template_bitfield = //g=
